// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabHeader should handle selected 1`] = `
<scale-tab-header aria-selected="false" id="scale-tab-header-2" role="tab" selected="true" tabindex="-1">
  <template shadowrootmode="open">
    <span class="tab-header" part="tab-header"></span>
  </template>
</scale-tab-header>
`;

exports[`TabHeader should match snapshot 1`] = `
<scale-tab-header aria-selected="false" id="scale-tab-header-0" role="tab" tabindex="-1">
  <template shadowrootmode="open">
    <span class="tab-header" part="tab-header">
      <slot></slot>
    </span>
  </template>
</scale-tab-header>
`;
